--- a/index.html
+++ b/index.html
@@ -438,10 +438,10 @@
 										<h3 class="text-uppercase resume-section-heading mb-3">Invited talk</h3>
 										<ul class="list-unstyled resume-lang-list">
 											<li class="mb-2">University of Pennsylvania, Center for Social Norms and Behavioral Dynamics <span class="text-muted">| Feb. 2024</span></li>
-												<li>University of Toronto, MacLab (Geoff MacDonald) <span class="text-muted">| Apr. 2023</span></li>
-												<li>Adelphi University <span class="text-muted">| Feb. 2023</span></li>
-												<li>Williams College <span class="text-muted">| Nov. 2022</span></li>
-											<li>Oklahoma State University,The OCEAN (Oklahoma Center for Evolutionary ANalysis)
+											<li class="mb-2">University of Toronto, MacLab (Geoff MacDonald) <span class="text-muted">| Apr. 2023</span></li>
+											<li class="mb-2">Adelphi University <span class="text-muted">| Feb. 2023</span></li>
+											<li class="mb-2">Williams College <span class="text-muted">| Nov. 2022</span></li>
+											<li class="mb-2">Oklahoma State University, The OCEAN (Oklahoma Center for Evolutionary ANalysis)
 												 <span class="text-muted">| Oct. 2022</span></li>
 										</ul>
 									</section><!--//talk-section-->
