--- a/index.html
+++ b/index.html
@@ -171,12 +171,18 @@
 									<div class="item-heading row align-items-center mb-2">
 										<div class="item-content col-12 col-md-4 col-lg-6 mb-2 mb-md-0"></div>
 										<div class="item-content" style="padding-left: 45px; text-indent: -25px;">
-											<p>10. <strong>Ko, A.</strong>, Neuberg, S. L., Pick, C. M., Varnum, M. E. W., & Becker, D. V. (in press).
+											<p>11. <strong>Ko, A.</strong>, Neuberg, S. L., Pick, C. M., Varnum, M. E. W., & Becker, D. V. (2024).
 												<strong>Responses to political partisans are shaped by a COVID-sensitive disease avoidance psychology:
 													A longitudinal investigation of functional flexibility</strong>.
 													<i>American Psychologist</i>.
-												<a href="https://osf.io/q5bv3" target="_blank">[Preprint]</a> |
+												<a href="https://doi.org/10.1037/amp0001318" target="_blank">[Paper]</a> |
 												<a href="https://osf.io/xuckv/" target="_blank">[OSF]</i></a>
+											</p>
+											<p>10. Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong>, Pick, C. M., & Varnum, M. E. W. (2024).
+												<strong>Sibling aggression is surprisingly common and sexually egalitarian. </strong>.
+													<i>Evolution and Human Behavior</i>.
+												<a href="https://doi.org/10.1016/j.evolhumbehav.2024.03.001" target="_blank">[Paper]</a> |
+												<a href="https://osf.io/y9fg7/?view_only=17fdbd2c34b948e4a929a12685113de3" target="_blank">[OSF]</i></a>
 											</p>
 											<p>09. <strong>Ko, A.</strong>, Bock, J. E., Ko, J., & Krems, J. A. (2023).
 												<strong>Contagious or prosocial? Perceptions of mask-wearers toward Whites and Asians:
