--- a/index.html
+++ b/index.html
@@ -83,9 +83,8 @@
 							    <div class="item mb-2" style="padding-left: 10px;">
 							        <div class="item-heading row align-items-center mb-2">
 							            <div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
-							                <strong>Post-doctoral Researcher </strong> |
-																<a href="https://bcfg.wharton.upenn.edu/" target="_blank" rel="noopener noreferrer" style="color: black;"><i>Behavior Change for Good initiative</i></a><br>
-							                The Wharton School and the School of Arts and Sciences of the University of Pennsylvania
+							                <strong>Post-doctoral Researcher </strong><br>
+							                <strong>The Wharton School and the School of Arts and Sciences of the University of Pennsylvania</strong>
 							            </div>
 							            <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
 							                Philadelphia, PA | 2023 -
