--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 							        <div class="item-heading row align-items-center mb-2">
 							            <div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
 							                <strong>Post-doctoral Researcher </strong><br>
-							                <strong>The Wharton School and the School of Arts and Sciences of the University of Pennsylvania</strong>
+							                <strong>The Wharton School of the University of Pennsylvania</strong>
 							            </div>
 							            <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
 							                Philadelphia, PA | 2023 -
