--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 												<a href="https://osf.io/xuckv/" target="_blank">[OSF]</i></a>
 											</p>
 											<p>10. Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong>, Pick, C. M., & Varnum, M. E. W. (2024).
-												<strong>Sibling aggression is surprisingly common and sexually egalitarian. </strong>.
+												<strong>Sibling aggression is surprisingly common and sexually egalitarian</strong>.
 													<i>Evolution and Human Behavior, 45</i>(2), 214-227.
 												<a href="https://doi.org/10.1016/j.evolhumbehav.2024.03.001" target="_blank">[Paper]</a> |
 												<a href="https://osf.io/y9fg7/?view_only=17fdbd2c34b948e4a929a12685113de3" target="_blank">[OSF]</i></a>
