--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<div class="row align-items-center">
 						<div class="resume-title col-12 col-md-6 col-lg-8 col-xl-9">
 							<h2 class="resume-name mb-0 text-uppercase">Ahra Ko</h2>
-							<div class="resume-tagline mb-3 mb-md-0">Social Psychologist</div>
+							<div class="resume-tagline mb-3 mb-md-0">Social Psychologist & Behavioral Scientist </div>
 						</div><!--//resume-title-->
 						<div class="resume-contact col-12 col-md-6 col-lg-4 col-xl-3">
 							<ul class="list-unstyled mb-0">
@@ -59,16 +59,13 @@
 						</div>
 
 						<div class="col text-start">
-							<p class="mb-0"> I am interested in
-								(a) how environments and cultures calibrate our goals and motivational priorities,
-								(b) how our goals and motivational priorities calibrate the way we perceive opportunities and threats afforded by environments and cultures,
-								and (c) how these, in turn, calibrate our social thoughts, feelings, and behaviors. </p>
-							<p> </p>
-							<p> My conceptual framework integrates an understanding of fundamental social motives with an affordance management approach
-								to human psychology, in which people seek to identify and manage the opportunities and threats they encounter. Integrating
-								these approaches provides a nuanced way of understanding a wide range of social phenomena, including the ways in which our
-								motivations and environments interact to shape how we come to understand ourselves and others at cross-cultural,
-								between-individual, and within-individual levels. </p>
+							<p class="mb-0"> Think about the top three goals in your life. How have these priorities shifted as you’ve moved through different stages of life? Think about the environmental changes you’ve encountered from pre-pandemic to the present. How have you navigated the new challenges and opportunities you faced in your physical and social environments?
+Our goals and environments continuously change, and so does the way we make sense of ourselves, others, and the world around us. I investigate the dynamics between motivational systems, cognitive appraisals, and environment. By integrating fundamental social motives and affordance management frameworks, I’ve uncovered key insights into:
+</p>•	Motivational priority across genders, life stages, and cultures (Ko et al., 2020; Perspectives on Psychological Science)
+</p>•	Motivational shifts in the face of ecological changes and their implications on navigating the emerging challenges (Ko et al., 2024; American Psychologist)
+</p>•	Motivational priority shifts across life stages and their implications on navigating challenges and opportunities presented by environments (Ko & Neuberg, Invited Revision; Behavioral and Brain Sciences).
+</p>My research reveals the critical mechanisms underlying the functionally flexible nature of social minds at intrapersonal, interpersonal, and cross-cultural levels.
+ </p>
 						</div><!--//col-->
 					</div>
 				</div><!--//resume-intro-->
