--- a/index.html
+++ b/index.html
@@ -77,11 +77,23 @@ Our goals and environments continuously change, and so does the way we make sens
 							<section class="Position-section py-3">
 							    <h3 class="text-uppercase resume-section-heading mb-4">Employment</h3>
 
+									<div class="item mb-2" style="padding-left: 10px;">
+											<div class="item-heading row align-items-center mb-2">
+													<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
+															<strong>Visiting Scholar </strong><br>
+															<strong>Department of Psychology, Arizona State University</strong>
+													</div>
+													<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
+															Tempe, AZ | 2024 -
+													</div>
+											</div>
+									</div><!--//item-->
+
 							    <div class="item mb-2" style="padding-left: 10px;">
 							        <div class="item-heading row align-items-center mb-2">
 							            <div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
 							                <strong>Post-doctoral Researcher </strong><br>
-							                <strong>The Wharton School of the University of Pennsylvania</strong>
+							                <strong>The Wharton School and the School of Arts and Sciences, University of Pennsylvania</strong>
 							            </div>
 							            <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
 							                Philadelphia, PA | 2023 -
@@ -96,7 +108,7 @@ Our goals and environments continuously change, and so does the way we make sens
 								<div class="item mb-2" style="padding-left: 10px;">
 									<div class="item-heading row align-items-center mb-2">
 										<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
-											<strong>Ph.D. Social Psychology, <i> Arizona State University</i></strong></div>
+											<strong>Ph.D. Psychology, <i> Arizona State University</i></strong></div>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
 											Tempe, AZ | 2017 - 2023</div>
 									</div>
@@ -105,7 +117,7 @@ Our goals and environments continuously change, and so does the way we make sens
 								<div class="item mb-2" style="padding-left: 10px;">
 									<div class="item-heading row align-items-center mb-2">
 										<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
-											<strong>M.A. Social and Personality Psychology, <i>Yonsei University</i></strong> </div>
+											<strong>M.A. Psychology, <i>Yonsei University</i></strong> </div>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
 											Seoul, South Korea | 2015 - 2017</div>
 									</div>
@@ -125,6 +137,14 @@ Our goals and environments continuously change, and so does the way we make sens
 								<h3 class="text-uppercase resume-section-heading mb-3">Honor & Award</h3>
 								<div class="item mb-2">
 									<div class="item-heading row align-items-center mb-2" style="padding-left: 10px;">
+										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
+											<strong>New Investigator Award (Finalist)</strong>, Human Behavior and Evolution Society</div>
+										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
+											2024</div>
+										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
+											<strong>Top Ten Most Impactful Articles of 2021</strong>, Association for Psychological Science</div>
+											<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
+											2022</div>
 										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
 											<strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</div>
 										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
@@ -167,6 +187,10 @@ Our goals and environments continuously change, and so does the way we make sens
 									<div class="item-heading row align-items-center mb-2">
 										<div class="item-content col-12 col-md-4 col-lg-6 mb-2 mb-md-0"></div>
 										<div class="item-content" style="padding-left: 45px; text-indent: -25px;">
+											<p>12. <strong>Ko, A.</strong> & Neuberg, S. L. (Invited Revision).
+												<strong>Ecological affordances across life stages: An affordance management framework</strong>.
+													<i>Behavioral and Brain Sciences</i>.
+											</p>
 											<p>11. <strong>Ko, A.</strong>, Neuberg, S. L., Pick, C. M., Varnum, M. E. W., & Becker, D. V. (2024).
 												<strong>Responses to political partisans are shaped by a COVID-sensitive disease avoidance psychology:
 													A longitudinal investigation of functional flexibility</strong>.
