--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 
 						<div class="col text-start">
 							<p class="mb-0"> Think about the top three goals in your life. How have these priorities shifted as you’ve moved through different stages of life? Think about the environmental changes you’ve encountered from pre-pandemic to the present. How have you navigated the new challenges and opportunities you faced in your physical and social environments?
-Our goals and environments continuously change, and so does the way we make sense of ourselves, others, and the world around us. I investigate the dynamics between motivational systems, cognitive appraisals, and environment. By integrating fundamental social motives and affordance management frameworks, I’ve uncovered key insights into:
-</p>•	Motivational priority across genders, life stages, and cultures (Ko et al., 2020; Perspectives on Psychological Science)
-</p>•	Motivational shifts in the face of ecological changes and their implications on navigating the emerging challenges (Ko et al., 2024; American Psychologist)
-</p>•	Motivational priority shifts across life stages and their implications on navigating challenges and opportunities presented by environments (Ko & Neuberg, Invited Revision; Behavioral and Brain Sciences).
+</p>Our goals and environments continuously change, and so does the way we make sense of ourselves, others, and the world around us. I investigate the dynamics between motivational systems, cognitive appraisals, and environment. By integrating fundamental social motives and affordance management frameworks, I’ve uncovered key insights into:
+•	Motivational priority across genders, life stages, and cultures (Ko et al., 2020; Perspectives on Psychological Science)
+•	Motivational shifts in the face of ecological changes and their implications on navigating the emerging challenges (Ko et al., 2024; American Psychologist)
+•	Motivational priority shifts across life stages and their implications on navigating challenges and opportunities presented by environments (Ko & Neuberg, Invited Revision; Behavioral and Brain Sciences).
 </p>My research reveals the critical mechanisms underlying the functionally flexible nature of social minds at intrapersonal, interpersonal, and cross-cultural levels.
  </p>
 						</div><!--//col-->
@@ -93,7 +93,7 @@ Our goals and environments continuously change, and so does the way we make sens
 							        <div class="item-heading row align-items-center mb-2">
 							            <div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
 							                <strong>Post-doctoral Researcher </strong><br>
-							                <strong>The Wharton School and the School of Arts and Sciences, University of Pennsylvania</strong>
+							                <strong>The Wharton School, University of Pennsylvania</strong>
 							            </div>
 							            <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
 							                Philadelphia, PA | 2023 -
@@ -445,6 +445,7 @@ Our goals and environments continuously change, and so does the way we make sens
 									<section class="talk-section py-3">
 										<h3 class="text-uppercase resume-section-heading mb-3">Invited talk</h3>
 										<ul class="list-unstyled resume-lang-list">
+											<li class="mb-2">Yonsei University <span class="text-muted">| Apr. 2024</span></li>
 											<li class="mb-2">University of Pennsylvania, Center for Social Norms and Behavioral Dynamics <span class="text-muted">| Feb. 2024</span></li>
 											<li class="mb-2">University of Toronto, MacLab (Geoff MacDonald) <span class="text-muted">| Apr. 2023</span></li>
 											<li class="mb-2">Adelphi University <span class="text-muted">| Feb. 2023</span></li>
