--- a/index.html
+++ b/index.html
@@ -269,15 +269,18 @@
 										<h4 class="item-title">Symposium Organizing</h4>
 									</div>
 									<div class="item-content" style="padding-left: 10px;">
+										<p><strong>From Walkability to Pathogens to Seasonality: Multilevel Influences of Ecology on Psychological and Cultural Dynamics"</strong> (October, 2024).
+											Society of Experimental Social Psychology, Santa Fe, New Mexico.
+											<br/>Speakers: <strong>Ahra Ko (Chair)</strong>, Shige Oishi, Mark Schaller, Michael Varnum.</p>
 										<p><strong>“Human values: An integrative perspective”</strong> (October, 2023).
 											Society of Experimental Social Psychology, Madison, Wisconsin.
 											<br/>Speakers: <strong>Ahra Ko</strong>, Daniel Sznycer, Joshua Jackson, Igor Grossmann.</p>
-										<p><strong>Chair, "COVID, Disease Psychology, and Politics"</strong> (June, 2022).
+										<p><strong>"COVID, Disease Psychology, and Politics"</strong> (June, 2022).
 											Human Behavior & Evolution Society Conference, Virtual.
-											<br/>Speakers: <strong>Ahra Ko</strong>, Michael Bang Peterson, Lene Aarøe, Lei Fan.</p>
+											<br/>Speakers: <strong>Ahra Ko (Chair)</strong>, Michael Bang Peterson, Lene Aarøe, Lei Fan.</p>
 										<p><strong>Co-chair, "The Invisible Hand of Family: Why and How Kin Matter"</strong> (February, 2020).
 											Society for Personality and Social Psychology Conference, New Orleans, Louisiana.
-											<br/>Speakers: <strong>Ahra Ko</strong>, Debra Lieberman, Oliver Sng, Jonathan Scultz.</p>
+											<br/>Speakers: <strong>Ahra Ko (Co-chair)</strong>, Debra Lieberman, Oliver Sng, Jonathan Scultz.</p>
 									</div>
 								</div><!--//Symposium item-->
 
