--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 						</div>
 
 						<div class="col text-start">
-							<p class="mb-0"> Think about the top three goals in your life. How have these priorities shifted as you’ve moved through different stages of life? Think about the environmental changes you’ve encountered from pre-pandemic to the present. How have you navigated the new challenges and opportunities you faced in your physical and social environments?
-</p>Our goals and environments continuously change, and so does the way we make sense of ourselves, others, and the world around us. I investigate the dynamics between motivational systems, cognitive appraisals, and environment. By integrating fundamental social motives and affordance management frameworks, I’ve uncovered key insights into:
-•	Motivational priority across genders, life stages, and cultures (Ko et al., 2020; Perspectives on Psychological Science)
-•	Motivational shifts in the face of ecological changes and their implications on navigating the emerging challenges (Ko et al., 2024; American Psychologist)
-•	Motivational priority shifts across life stages and their implications on navigating challenges and opportunities presented by environments (Ko & Neuberg, Invited Revision; Behavioral and Brain Sciences).
+							<p class="mb-0"> Think about the top three goals in your life. How have these priorities shifted as you’ve moved through different stages of life? Think about the environmental changes you’ve encountered from pre-pandemic to the present. How have you navigated the new challenges and opportunities you faced in your physical and social environments?</p>
+							<br>Our goals and environments continuously change, and so does the way we make sense of ourselves, others, and the world around us. I investigate the dynamics between motivational systems, cognitive appraisals, and environment. By integrating fundamental social motives and affordance management frameworks, I’ve uncovered key insights into:
+<br>•	Motivational priority across genders, life stages, and cultures (Ko et al., 2020; Perspectives on Psychological Science)
+<br>•	Motivational shifts in the face of ecological changes and their implications on navigating the emerging challenges (Ko et al., 2024; American Psychologist)
+<br>•	Motivational priority shifts across life stages and their implications on navigating challenges and opportunities presented by environments (Ko & Neuberg, Invited Revision; Behavioral and Brain Sciences).
 </p>My research reveals the critical mechanisms underlying the functionally flexible nature of social minds at intrapersonal, interpersonal, and cross-cultural levels.
  </p>
 						</div><!--//col-->
@@ -518,12 +518,10 @@
 										<h3 class="text-uppercase resume-section-heading mb-3">Ad Hoc Manuscript Review</h3>
 										<ul class="list-unstyled resume-lang-list">
 											<li class="mb-0"><i>Journal of Personality and Social Psychology,
-												Psychological Science,
-												Journal of Social and Personal Relationships,
-												Journal of Happiness Studies,
-												Personality and Individual Differences,
-												Evolutionary Behavioral Science,
-												Social Cognition,
+												Psychological Science, Journal of Social and Personal Relationships,
+												Journal of Happiness Studies, Personality and Individual Differences,
+												Motivation and Emotion, Current Research in Ecological and Social Psychology,
+												Evolutionary Behavioral Science, Social Cognition,
 												Child & Youth Care Forum</i></li>
 										</ul>
 									</section>
@@ -533,30 +531,22 @@
 										<ul class="list-unstyled resume-education-list">
 											<li class="mb-1">
 												<div class="resume-degree font-weight-bold">Steven L. Neuberg</div>
-												<div class="resume-degree-org text-muted">Professor and Chair of Psychology</div>
+												<div class="resume-degree-org text-muted">Foundation Professor</div>
 												<div class="resume-degree-org text-muted">Arizona State University</div>
 												<div class="resume-degree-time text-muted">steven.neuberg@asu.edu</div>
 											</li>
 											<li class="mb-1">
 												<div class="resume-degree font-weight-bold">Douglas T. Kenrick</div>
-												<div class="resume-degree-org text-muted">President’s Professor of Psychology</div>
+												<div class="resume-degree-org text-muted">President’s Professor</div>
 												<div class="resume-degree-org text-muted">Arizona State University</div>
 												<div class="resume-degree-time text-muted">douglas.kenrick@asu.edu</div>
 											</li>
 											<li class="mb-1">
-												<div class="resume-degree font-weight-bold">Michael E. W. Varnum</div>
-												<div class="resume-degree-org text-muted">Associate Professor of Psychology</div>
-												<div class="resume-degree-org text-muted">Arizona State University</div>
-												<div class="resume-degree-time text-muted">mvarnum@asu.edu</div>
+												<div class="resume-degree font-weight-bold">Angela L. Duckworth</div>
+												<div class="resume-degree-org text-muted">Rosa Lee and Egbert Chang Professor</div>
+												<div class="resume-degree-org text-muted">University of Pennsylvania</div>
+												<div class="resume-degree-time text-muted">aduckworth@characterlab.org</div>
 											</li>
-											<li class="mb-1">
-												<div class="resume-degree font-weight-bold">Eunkook "Mark" Suh</div>
-												<div class="resume-degree-org text-muted">Professor of Psychology</div>
-												<div class="resume-degree-org text-muted">Yonsei University</div>
-												<div class="resume-degree-time text-muted">esuh@yonsei.ac.kr</div>
-											</li>
-										</ul>
-
 										</ul>
 									</section><!--//reference-section-->
 
