--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 						<div class="col text-start">
 							<p class="mb-0"> Think about the top three goals in your life. How have these priorities shifted as you’ve moved through different stages of life? Think about the environmental changes you’ve encountered from pre-pandemic to the present. How have you navigated the new challenges and opportunities you faced in your physical and social environments?</p>
 							<br>Our goals and environments continuously change, and so does the way we make sense of ourselves, others, and the world around us. I investigate the dynamics between motivational systems, cognitive appraisals, and environment. By integrating fundamental social motives and affordance management frameworks, I’ve uncovered key insights into:
-<br>•	Motivational priority across genders, life stages, and cultures (Ko et al., 2020; Perspectives on Psychological Science)
-<br>•	Motivational shifts in the face of ecological changes and their implications on navigating the emerging challenges (Ko et al., 2024; American Psychologist)
-<br>•	Motivational priority shifts across life stages and their implications on navigating challenges and opportunities presented by environments (Ko & Neuberg, Invited Revision; Behavioral and Brain Sciences).
+<br>•	Motivational priority across genders, life stages, and cultures (Ko et al., 2020; <i>Perspectives on Psychological Science</i>)
+<br>•	Motivational shifts in the face of ecological changes and their implications on navigating the emerging challenges (Ko et al., 2024; <i>American Psychologist</i>)
+<br>•	Motivational priority shifts across life stages and their implications on navigating challenges and opportunities presented by environments (Ko & Neuberg, Invited Revision; <i>Behavioral and Brain Sciences</i>).
 </p>My research reveals the critical mechanisms underlying the functionally flexible nature of social minds at intrapersonal, interpersonal, and cross-cultural levels.
  </p>
 						</div><!--//col-->
