--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link rel="shortcut icon" href="favicon.ico">
 
 	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Inter:wght@400;500;700;900&display=swap" rel="stylesheet">
 
 	<!-- FontAwesome JS-->
 	<script defer src="assets/fontawesome/js/all.min.js"></script>
@@ -32,7 +32,7 @@
 					<div class="row align-items-center">
 						<div class="resume-title col-12 col-md-6 col-lg-8 col-xl-9">
 							<h2 class="resume-name mb-0 text-uppercase">Ahra Ko</h2>
-							<div class="resume-tagline mb-3 mb-md-0">Social Psychologist & Behavioral Scientist </div>
+							<div class="resume-tagline mb-3 mb-md-0">Social Psychologist</div>
 						</div><!--//resume-title-->
 						<div class="resume-contact col-12 col-md-6 col-lg-4 col-xl-3">
 							<ul class="list-unstyled mb-0">
@@ -59,12 +59,20 @@
 						</div>
 
 						<div class="col text-start">
-							<p class="mb-0"> Think about the top three goals in your life. How have these priorities shifted as you’ve moved through different stages of life? Think about the environmental changes you’ve encountered from pre-pandemic to the present. How have you navigated the new challenges and opportunities you faced in your physical and social environments?</p>
-							<br>Our goals and environments continuously change, and so does the way we make sense of ourselves, others, and the world around us. I investigate the dynamics between motivational systems, cognitive appraisals, and environment. By integrating fundamental social motives and affordance management frameworks, I’ve uncovered key insights into:
-<br>•	Motivational priority across genders, life stages, and cultures (Ko et al., 2020; <i>Perspectives on Psychological Science</i>)
-<br>•	Motivational shifts in the face of ecological changes and their implications on navigating the emerging challenges (Ko et al., 2024; <i>American Psychologist</i>)
-<br>•	Motivational priority shifts across life stages and their implications on navigating challenges and opportunities presented by environments (Ko & Neuberg, Invited Revision; <i>Behavioral and Brain Sciences</i>).
-</p>My research reveals the critical mechanisms underlying the functionally flexible nature of social minds at intrapersonal, interpersonal, and cross-cultural levels.
+							<p class="mb-0"> As a super-social species, we face diverse challenges and opportunities in navigating relationships:
+								protecting ourselves from danger, avoiding infectious others, building friendships, gaining status, pursuing romantic partnerships,
+								and caring for our families. Among these goals, which three are most important to you, and how motivated are you toward each?
+								Have these goal priorities shifted over time, especially compared to earlier stages of your life or in response to the global pandemic?
+
+								Our goal priorities shape how we perceive and interact with ourselves, others, and the world around us.
+								These goal-directed social cognitions function to help us achieve our goals by flexibly navigating the challenges and opportunities
+								in our social lives. As our goal priorities shift across life stages and in response to environmental changes, our goal-directed
+								social cognition must also flexibly adjust.
+
+								I investigate these <strong>functionally flexible social minds</strong>—how our social cognitions are flexibly calibrated in response to
+								shifting goal priorities in a functional way that facilitates goal achievement. My research explores dynamic connections
+								between (a) goal priorities, (b) cognitive appraisal, and (c) environments, examining
+								how they interact at intrapersonal, interpersonal, and cross-cultural levels:
  </p>
 						</div><!--//col-->
 					</div>
