--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 										<div class="item-content" style="padding-left: 45px; text-indent: -25px;">
 											<p>12. <strong>Ko, A.</strong> & Neuberg, S. L. (Invited Revision).
 												<strong>Ecological affordances across life stages: An affordance management framework</strong>.
-													<i>Behavioral and Brain Sciences</i>.
+													<i>Behavioral and Brain Sciences</i> [Target article].
 											</p>
 											<p>11. <strong>Ko, A.</strong>, Neuberg, S. L., Pick, C. M., Varnum, M. E. W., & Becker, D. V. (2024).
 												<strong>Responses to political partisans are shaped by a COVID-sensitive disease avoidance psychology:
@@ -277,7 +277,7 @@
 										<h4 class="item-title">Symposium Organizing</h4>
 									</div>
 									<div class="item-content" style="padding-left: 10px;">
-										<p><strong>From Walkability to Pathogens to Seasonality: Multilevel Influences of Ecology on Psychological and Cultural Dynamics"</strong> (October, 2024).
+										<p><strong>"From Walkability to Pathogens to Seasonality: Multilevel Influences of Ecology on Psychological and Cultural Dynamics"</strong> (October, 2024).
 											Society of Experimental Social Psychology, Santa Fe, New Mexico.
 											<br/>Speakers: <strong>Ahra Ko (Chair)</strong>, Shige Oishi, Mark Schaller, Michael Varnum.</p>
 										<p><strong>“Human values: An integrative perspective”</strong> (October, 2023).
@@ -286,7 +286,7 @@
 										<p><strong>"COVID, Disease Psychology, and Politics"</strong> (June, 2022).
 											Human Behavior & Evolution Society Conference, Virtual.
 											<br/>Speakers: <strong>Ahra Ko (Chair)</strong>, Michael Bang Peterson, Lene Aarøe, Lei Fan.</p>
-										<p><strong>Co-chair, "The Invisible Hand of Family: Why and How Kin Matter"</strong> (February, 2020).
+										<p><strong>"The Invisible Hand of Family: Why and How Kin Matter"</strong> (February, 2020).
 											Society for Personality and Social Psychology Conference, New Orleans, Louisiana.
 											<br/>Speakers: <strong>Ahra Ko (Co-chair)</strong>, Debra Lieberman, Oliver Sng, Jonathan Scultz.</p>
 									</div>
