--- a/index.html
+++ b/index.html
@@ -63,16 +63,16 @@
 								protecting ourselves from danger, avoiding infectious others, building friendships, gaining status, pursuing romantic partnerships,
 								and caring for our families. Among these goals, which three are most important to you, and how motivated are you toward each?
 								Have these goal priorities shifted over time, especially compared to earlier stages of your life or in response to the global pandemic?
-
+<br>
 								<br>Our goal priorities shape how we perceive and interact with ourselves, others, and the world around us.
 								These goal-directed social cognitions function to help us achieve our goals by flexibly navigating the challenges and opportunities
 								in our social lives. As our goal priorities shift across life stages and in response to environmental changes, our goal-directed
 								social cognition must also flexibly adjust.
-
+<br>
 								<br>I investigate these <strong>functionally flexible social minds</strong>—how our social cognitions are flexibly calibrated in response to
 								shifting goal priorities in a functional way that facilitates goal achievement. My research explores dynamic connections
 								between (a) goal priorities, (b) cognitive appraisal, and (c) environments, examining
-								how they interact at intrapersonal, interpersonal, and cross-cultural levels:
+								how they interact at intrapersonal, interpersonal, and cross-cultural levels
  </p>
 						</div><!--//col-->
 					</div>
