--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 								<br>I investigate these <strong>functionally flexible social minds</strong>—how our social cognitions are flexibly calibrated in response to
 								shifting goal priorities in a functional way that facilitates goal achievement. My research explores dynamic connections
 								between (a) goal priorities, (b) cognitive appraisal, and (c) environments, examining
-								how they interact at intrapersonal, interpersonal, and cross-cultural levels
+								how they interact at intrapersonal, interpersonal, and cross-cultural levels.
  </p>
 						</div><!--//col-->
 					</div>
