--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 										<div class="item-content" style="padding-left: 45px; text-indent: -25px;">
 											<p>12. <strong>Ko, A.</strong> & Neuberg, S. L. (Invited Revision).
 												<strong>Ecological affordances across life stages: An affordance management framework</strong>.
-													<i>Behavioral and Brain Sciences</i> [Target article].
+													<i>Behavioral and Brain Sciences</i>. [Target article]
 											</p>
 											<p>11. <strong>Ko, A.</strong>, Neuberg, S. L., Pick, C. M., Varnum, M. E. W., & Becker, D. V. (2024).
 												<strong>Responses to political partisans are shaped by a COVID-sensitive disease avoidance psychology:
