--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
 												<div class="resume-degree font-weight-bold">Angela L. Duckworth</div>
 												<div class="resume-degree-org text-muted">Rosa Lee and Egbert Chang Professor</div>
 												<div class="resume-degree-org text-muted">University of Pennsylvania</div>
-												<div class="resume-degree-time text-muted">aduckworth@characterlab.org</div>
+												<div class="resume-degree-time text-muted">duckwort@wharton.upenn.edu</div>
 											</li>
 										</ul>
 									</section><!--//reference-section-->
