--- a/index.html
+++ b/index.html
@@ -195,71 +195,75 @@
 									<div class="item-heading row align-items-center mb-2">
 										<div class="item-content col-12 col-md-4 col-lg-6 mb-2 mb-md-0"></div>
 										<div class="item-content" style="padding-left: 45px; text-indent: -25px;">
-											<p>12. <strong>Ko, A.</strong> & Neuberg, S. L. (Invited Revision).
+											<p>13. <strong>Ko, A.</strong> & Neuberg, S. L. (Invited Revision)
 												<strong>Ecological affordances across life stages: An affordance management framework</strong>.
 													<i>Behavioral and Brain Sciences</i>. [Target article]
 											</p>
-											<p>11. <strong>Ko, A.</strong>, Neuberg, S. L., Pick, C. M., Varnum, M. E. W., & Becker, D. V. (2024).
+											<p>12. Duckworth, A. L., <strong>Ko, A.</strong>, Milkman, K. L … & Van den Bulte, C. (invited revision)
+												<strong>Nudging teachers: A megastudy to increase math achievement among 3 million elementary school students. </strong>
+												<i>Proceedings of the National Academy of Sciences</i>
+											</p>
+											<p>11. <strong>Ko, A.</strong>, Neuberg, S. L., Pick, C. M., Varnum, M. E. W., & Becker, D. V. (2024)
 												<strong>Responses to political partisans are shaped by a COVID-sensitive disease avoidance psychology:
 													A longitudinal investigation of functional flexibility</strong>.
 													<i>American Psychologist</i>.
 												<a href="https://doi.org/10.1037/amp0001318" target="_blank">[Paper]</a> |
 												<a href="https://osf.io/xuckv/" target="_blank">[OSF]</i></a>
 											</p>
-											<p>10. Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong>, Pick, C. M., & Varnum, M. E. W. (2024).
+											<p>10. Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong>, Pick, C. M., & Varnum, M. E. W. (2024)
 												<strong>Sibling aggression is surprisingly common and sexually egalitarian</strong>.
 													<i>Evolution and Human Behavior, 45</i>(2), 214-227.
 												<a href="https://doi.org/10.1016/j.evolhumbehav.2024.03.001" target="_blank">[Paper]</a> |
 												<a href="https://osf.io/y9fg7/?view_only=17fdbd2c34b948e4a929a12685113de3" target="_blank">[OSF]</i></a>
 											</p>
-											<p>09. <strong>Ko, A.</strong>, Bock, J. E., Ko, J., & Krems, J. A. (2023).
+											<p>09. <strong>Ko, A.</strong>, Bock, J. E., Ko, J., & Krems, J. A. (2023)
 												<strong>Contagious or prosocial? Perceptions of mask-wearers toward Whites and Asians:
 													A cross-cultural comparison during the early stage of the COVID-19 pandemic</strong>.
 													<i>Social and Personality Psychology Compass</i>, 17(11), e12880.
 												<a href="https://doi.org/10.1111/spc3.12880" target="_blank">[Paper]</a> |
 												<a href="https://osf.io/t6jdv/" target="_blank">[OSF]</a>
 												</p>
-											<p>08. <strong>Ko, A.</strong>, Suh, E. M., Shin, J., & Neuberg, S. L. (2023).
+											<p>08. <strong>Ko, A.</strong>, Suh, E. M., Shin, J., & Neuberg, S. L. (2023)
 												<strong>Functionally calibrating life satisfaction: The case of mating motives and self-perceived mate value</strong>.
 												<i>Journal of Happiness Studies, 24</i>(2), 651-675.
 												<a href="https://link.springer.com/article/10.1007/s10902-022-00615-1" target="_blank">[Paper]</a>
 											</p>
-											<p>07. Pick, C. M., <strong>Ko, A.</strong>, Wormley, A. S., Wiezel, A., Kenrick, D. T., … & Varnum, M. E. W. (2022).
+											<p>07. Pick, C. M., <strong>Ko, A.</strong>, Wormley, A. S., Wiezel, A., Kenrick, D. T., … & Varnum, M. E. W. (2022)
 												<strong>Family still matters: Human social motivation during a global pandemic</strong>.
 												<i>Evolution and Human Behavior, 43</i>(6), 527-535.
 												<a href="https://www.sciencedirect.com/science/article/pii/S1090513822000629" target="_blank">[Paper]</a> |
 												<a href="https://osf.io/p9z2a/">[OSF]</a>
 											</p>
-										 	<p>06. Pick, C. M., <strong>Ko, A.</strong>, Kenrick, D. T., … & Varnum, M. E. W. (2022).
+										 	<p>06. Pick, C. M., <strong>Ko, A.</strong>, Kenrick, D. T., … & Varnum, M. E. W. (2022)
 												<strong>Fundamental social motives measured across forty-two cultures in two waves</strong>.
 												<i>Scientific Data, 9</i>(1), 1-12.
 												<a href="https://www.nature.com/articles/s41597-022-01579-w" target="_blank">[Paper]</a> |
 												<a href="https://osf.io/p9z2a/" target="_blank">[OSF]</a>
 											</p>
-										 	<p>05. Barlev, M., <strong>Ko, A.</strong>, Krems, J. A., & Neuberg, S. L. (2022).
+										 	<p>05. Barlev, M., <strong>Ko, A.</strong>, Krems, J. A., & Neuberg, S. L. (2022)
 												<strong>Weight location moderates weight-based self-devaluation and perceived social devaluation in women</strong>.
 												<i>Social Psychological and Personality Science, 19485506211060724</i>.
 												<a href="https://doi.org/10.1177/19485506211060724" target="_blank">[Paper]</a> |
 												<a href="https://osf.io/7rbk2/" target="_blank">[OSF]</a>
 											</p>
-										 	<p>04. Krems, J. A., <strong>Ko, A.</strong>, Moon, J. W., & Varnum, M. E. W. (2021).
+										 	<p>04. Krems, J. A., <strong>Ko, A.</strong>, Moon, J. W., & Varnum, M. E. W. (2021)
 												<strong>Sexually unrestricted women are perceived as having low self-esteem: First evidence for a pervasive, robust (but unfounded) stereotype</strong>.
 												<i>Psychological Science, 32</i>(6), 871-889.
 												<a href="https://doi.org/10.1177/0956797620983829" target="_blank">[Paper]</a> |
 												<a href="https://osf.io/mp4nu/?view_only=aa72c235049949f2a6d48ee229ffdf9c" target="_blank">[OSF]</a>
 											</p>
-										 	<p>03. <strong>Ko, A.</strong>, Pick, C. M., Kwon, J. Y., Barlev, M., Krems, J. A., Varnum, M. E., ... & Kenrick, D. T. (2020).
+										 	<p>03. <strong>Ko, A.</strong>, Pick, C. M., Kwon, J. Y., Barlev, M., Krems, J. A., Varnum, M. E., ... & Kenrick, D. T. (2020)
 												<strong>Family matters: Rethinking the psychology of human social motivation</strong>.
 												<i>Perspectives on Psychological Science, 15</i>(1), 173-201.
 												<a href="https://doi.org/10.1177/1745691619872986" target="_blank">[Paper]</a> |
 												<a href="https://osf.io/p9z2a/" target="_blank">[OSF]</a>
 											</p>
-										 	<p>02. Becker, D. V., Rheem, H., Pick, C. M., <strong>Ko, A.</strong>, & Lafko, S. R. (2019).
+										 	<p>02. Becker, D. V., Rheem, H., Pick, C. M., <strong>Ko, A.</strong>, & Lafko, S. R. (2019)
 												<strong>Angry faces hold attention: Evidence of attentional adhesion in two paradigms</strong>.
 												<i>Progress in Brain Research, 247</i>.
 											<a href="https://doi.org/10.1016/bs.pbr.2019.03.033" target="_blank">[Paper]</a>
 										</p>
-										 	<p>01. <strong>Ko, A.</strong>, & Suh, E. M. (2019).
+										 	<p>01. <strong>Ko, A.</strong>, & Suh, E. M. (2019)
 												<strong>Does physical attractiveness buy happiness? Women’s mating motivation and happiness</strong>.
 												<i>Motivation and Emotion, 43</i>(1), 1–11.
 												<a href="https://doi.org/10.1007/s11031-018-9717-z" target="_blank">[Paper]</a>
