--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 											</p>
 											<p>12. Duckworth, A. L., <strong>Ko, A.</strong>, Milkman, K. L … & Van den Bulte, C. (invited revision)
 												<strong>Nudging teachers: A megastudy to increase math achievement among 3 million elementary school students. </strong>
-												<i>Proceedings of the National Academy of Sciences</i>
+												<i>Proceedings of the National Academy of Sciences.</i>
 											</p>
 											<p>11. <strong>Ko, A.</strong>, Neuberg, S. L., Pick, C. M., Varnum, M. E. W., & Becker, D. V. (2024)
 												<strong>Responses to political partisans are shaped by a COVID-sensitive disease avoidance psychology:
