--- a/index.html
+++ b/index.html
@@ -195,13 +195,15 @@
 									<div class="item-heading row align-items-center mb-2">
 										<div class="item-content col-12 col-md-4 col-lg-6 mb-2 mb-md-0"></div>
 										<div class="item-content" style="padding-left: 45px; text-indent: -25px;">
-											<p>13. <strong>Ko, A.</strong> & Neuberg, S. L. (Invited Revision)
+											<p>13. <strong>Ko, A.</strong> & Neuberg, S. L. (2025)
 												<strong>Ecological affordances across life stages: An affordance management framework</strong>.
 													<i>Behavioral and Brain Sciences</i>. [Target article]
+													<a href="https://doi.org/10.1017/S0140525X25000056" target="_blank">[Paper]</a>
 											</p>
-											<p>12. Duckworth, A. L., <strong>Ko, A.</strong>, Milkman, K. L … & Van den Bulte, C. (invited revision)
+											<p>12. Duckworth, A. L., <strong>Ko, A.</strong>, Milkman, K. L … & Van den Bulte, C. (2025)
 												<strong>Nudging teachers: A megastudy to increase math achievement among 3 million elementary school students. </strong>
 												<i>Proceedings of the National Academy of Sciences.</i>
+												<a href="https://doi.org/10.1073/pnas.2418616122" target="_blank">[Paper]</a>
 											</p>
 											<p>11. <strong>Ko, A.</strong>, Neuberg, S. L., Pick, C. M., Varnum, M. E. W., & Becker, D. V. (2024)
 												<strong>Responses to political partisans are shaped by a COVID-sensitive disease avoidance psychology:
