--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 											</p>
 											<p>12. Duckworth, A. L., <strong>Ko, A.</strong>, Milkman, K. L … & Van den Bulte, C. (2025)
 												<strong>Nudging teachers: A megastudy to increase math achievement among 3 million elementary school students. </strong>
-												<i>Proceedings of the National Academy of Sciences. 122</i>(13), e2418616122.
+												<i>Proceedings of the National Academy of Sciences, 122</i>(13), e2418616122.
 												<a href="https://doi.org/10.1073/pnas.2418616122" target="_blank">[Paper]</a>
 											</p>
 											<p>11. <strong>Ko, A.</strong>, Neuberg, S. L., Pick, C. M., Varnum, M. E. W., & Becker, D. V. (2024)
