--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
 								<div class="item mb-2">
 									<div class="item-heading row align-items-center mb-2" style="padding-left: 10px;">
 										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
-											<strong>New Investigator Award (Finalist)</strong>, Human Behavior and Evolution Society</div>
+											<strong>Post-doctoral Award</strong>, Human Behavior and Evolution Society</div>
 										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
-											2024</div>
+											2025</div>
 										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
 											<strong>Top Ten Most Impactful Articles of 2021</strong>, Association for Psychological Science</div>
 											<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
