--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
 								<div class="item mb-2">
 									<div class="item-heading row align-items-center mb-2" >
-										<h4 class="item-title">Symposium Organizing</h4>
+										<h4 class="item-title">Symposium</h4>
 									</div>
 									<div class="item-content" style="padding-left: 10px;">
 										<p><strong>"From Walkability to Pathogens to Seasonality: Multilevel Influences of Ecology on Psychological and Cultural Dynamics"</strong> (October, 2024).
