--- a/index.html
+++ b/index.html
@@ -59,20 +59,19 @@
 						</div>
 
 						<div class="col text-start">
-							<p class="mb-0"> As a super-social species, we face diverse challenges and opportunities in navigating relationships:
-								protecting ourselves from danger, avoiding infectious others, building friendships, gaining status, pursuing romantic partnerships,
-								and caring for our families. Among these goals, which three are most important to you, and how motivated are you toward each?
-								Have these goal priorities shifted over time, especially compared to earlier stages of your life or in response to the global pandemic?
+							<p class="mb-0"> What enables humans to thrive amid constant change? From global crises like pandemics to personal transitions such as becoming a parent,
+								life presents us with ever-shifting demands. Successfully navigating this dynamic landscape represents one of the fundamental challenges any psychological
+								system must solve: how to maintain coherent functioning while continuously adapting to novel circumstances.
 <br>
-								<br>Our goal priorities shape how we perceive and interact with ourselves, others, and the world around us.
-								These goal-directed social cognitions function to help us achieve our goals by flexibly navigating the challenges and opportunities
-								in our social lives. As our goal priorities shift across life stages and in response to environmental changes, our goal-directed
-								social cognition must also flexibly adjust.
+								<br>My research highlights the remarkable flexibility of the human mind. In response to new demands, our minds dynamically reallocate priorities, reassess
+								threats and opportunities, and revise strategies to achieve emerging goals. I aim to advance a science of psychological flexibility as a functional
+								recalibration system, investigating how it coordinates shifts in motivation, cognition, emotion, and behavior, drawing on data across intrapersonal,
+								interpersonal, and cross-cultural levels of analysis.
 <br>
-								<br>I investigate these <strong>functionally flexible social minds</strong>—how our social cognitions are flexibly calibrated in response to
-								shifting goal priorities in a functional way that facilitates goal achievement. My research explores dynamic connections
-								between (a) goal priorities, (b) cognitive appraisal, and (c) environments, examining
-								how they interact at intrapersonal, interpersonal, and cross-cultural levels.
+								<br>My work explores three core areas: (1) the <i>mechanisms</i> that shape shifts in priorities and how they recalibrate the way we perceive and navigate
+								the social world; (2) the <i>functions</i> of this flexibility in managing goals and affordances; and (3) its <i>implications</i> for psychological well-being
+								and behavior change. Understanding these dynamics reveals a core feature of human psychology and offers insight into how people can more effectively
+								navigate today’s increasingly diverse, complex, and rapidly changing world.
  </p>
 						</div><!--//col-->
 					</div>
@@ -83,31 +82,32 @@
 						<div class="resume-main col-12 col-lg-8 col-xl-9   pe-0   pe-lg-5">
 
 							<section class="Position-section py-3">
-							    <h3 class="text-uppercase resume-section-heading mb-4">Employment</h3>
+							    <h3 class="text-uppercase resume-section-heading mb-4">CURRENT ACADEMIC POSITIONS</h3>
 
 									<div class="item mb-2" style="padding-left: 10px;">
+										<div class="item mb-2" style="padding-left: 10px;">
+												<div class="item-heading row align-items-center mb-2">
+														<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
+																<strong>Post-doctoral Researcher </strong><br>
+																<strong>The Wharton School and the School of Arts and Sciences, University of Pennsylvania</strong>
+														</div>
+														<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
+																Philadelphia, PA
+														</div>
+												</div>
+										</div><!--//item-->
+
 											<div class="item-heading row align-items-center mb-2">
 													<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
 															<strong>Visiting Scholar </strong><br>
 															<strong>Department of Psychology, Arizona State University</strong>
 													</div>
 													<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
-															Tempe, AZ | 2024 -
+															Tempe, AZ
 													</div>
 											</div>
 									</div><!--//item-->
 
-							    <div class="item mb-2" style="padding-left: 10px;">
-							        <div class="item-heading row align-items-center mb-2">
-							            <div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">
-							                <strong>Post-doctoral Researcher </strong><br>
-							                <strong>The Wharton School, University of Pennsylvania</strong>
-							            </div>
-							            <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">
-							                Philadelphia, PA | 2023 -
-							            </div>
-							        </div>
-							    </div><!--//item-->
 							</section>
 
 							<section class="education-section py-3">
@@ -146,7 +146,7 @@
 								<div class="item mb-2">
 									<div class="item-heading row align-items-center mb-2" style="padding-left: 10px;">
 										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
-											<strong>Post-doctoral Award</strong>, Human Behavior and Evolution Society</div>
+											<strong>Postdoctoral Award</strong>, Human Behavior and Evolution Society</div>
 										<div class="item-meta col-12 col-md-4 col-lg-2 text-muted text-start text-md-end">
 											2025</div>
 										<div class="item-content col-12 col-md-8 col-lg-10 mb-2 mb-md-0">
