--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 						</div>
 
 						<div class="col text-start">
-							<p class="mb-0"> What enables humans to thrive amid constant change? From global crises like pandemics to personal transitions such as becoming a parent,
+							<p class="mb-0"> <strong>What enables humans to thrive amid constant change?</strong> From global crises like pandemics to personal transitions such as becoming a parent,
 								life presents us with ever-shifting demands. Successfully navigating this dynamic landscape represents one of the fundamental challenges any psychological
 								system must solve: how to maintain coherent functioning while continuously adapting to novel circumstances.
 <br>
-								<br>My research highlights the remarkable flexibility of the human mind. In response to new demands, our minds dynamically reallocate priorities, reassess
+								<br><strong>My research highlights the remarkable <i>flexibility</i> of the human mind.</strong> In response to new demands, our minds dynamically reallocate priorities, reassess
 								threats and opportunities, and revise strategies to achieve emerging goals. I aim to advance a science of psychological flexibility as a functional
 								recalibration system, investigating how it coordinates shifts in motivation, cognition, emotion, and behavior, drawing on data across intrapersonal,
 								interpersonal, and cross-cultural levels of analysis.
